css/main.css
html, body {
  margin: 0 auto;
  padding: 0 !important;
  position: relative;
  background-color: white;
  font-size: 16pt;
  width: 100% !important;
  display: inline-block;
  overflow-x: hidden;
}

button {
  background-color: #00823e;
  color: white !important;
  font-family:  'Helvetica' !important;
  border: none;
  height: 40px;
  width: 175px;
  font-weight: 600;
}

button a {
  color: white;
  font-weight: bold !important;
}

button:hover {
  background-color:#C20D2D;
  cursor: pointer;
}

a:hover {
  cursor: pointer;
}

h1 {
  color: #535559;
  font-family: "Helvetica";
  font-size: 28pt;
  font-weight: 600 !important;
  text-align: center;
}

/* CSS for individual dividers on index page */
/* NOTE: These look redundant, but are used to make sure dividers are evenly
resized when windows are shrunk. See the Exceptions section at bottom for use.*/
hr.cloud {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.traffic {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.map {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.fire {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.command {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.flood {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.earthquakes {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.diseases {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.chem {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.bag {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.wa {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

hr.cityhall {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: 20px;
  margin-left: 20px;
}

/* CSS for dividers on non-index page */
hr.side {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: -25px;
  margin-left: -5px;
}

/* CSS for dividers on Digital Go Bag page */
hr.dgobag {
  border: none;
  height: 1px;
  background-color: #BEBEBE;
  margin-right: -25px;
  margin-left: -155px;
}

/* CSS for positioning individual images on index page */
/* NOTE: These look redundant, but are used to make sure icons are evenly
re-centered when windows are shrunk. See the Exceptions section at bottom for use.*/
img.cloud {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.traffic {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.map {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.fire {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.command {
  position: relative;
  display: inline-block;
  top: 13px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.flood {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.earthquakes {
  position: relative;
  display: inline-block;
  top: 15px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.diseases {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.chem {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.bag {
  position: relative;
  display: inline-block;
  top: 7px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.wa {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

img.cityhall {
  position: relative;
  display: inline-block;
  top: 10px;
  margin-left: 40px;
  margin-right: 25px !important;
}

/* CSS for mobile app icon on Digital Go Bag page */
img.dgobag-logo {
  position: relative;
  float: left;
  margin-left: -110px;
  margin-right: 35px;
  margin-top: 25px;
}

/* CSS for OEM Shelter Logo */
/* Because the logo is circular, it has different sizing constraints
in order to make the sizing match that of the square logos */
img.dgobag-logo-oem-shelter {
  position: relative;
  float: left;
  margin-left: -120px;
  margin-right: 25px;
  margin-top: 25px;
}

/* CSS for Apple store icon on Digital Go Bag page */
img.dgobag-apple {
  border: 3px solid #ffffff;
  margin-left: -2px;
}

/* CSS for Google Play store icon on Digital Go Bag page */
img.dgobag-play {
}

img.logo {
  height: 80px;
  width: auto;
}

/****************
*    Header     *
****************/

/* CSS for RRAIN logo on header */
#index-header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -50px;
}

/* CSS for RRAIN logo on header for non-index page */
#header-logo {
  float: right;
  width: 45px;
  height: auto !important;
  margin-right: 15px !important;
  margin-top: -50px;
}

/* CSS for green bar on header */
.blog-title {
  background-color: #00823e;
  color: white !important;
  font-size: 16pt !important;
  font-weight: bold !important;
  font-family:  'Helvetica' !important;
  border: none !important;
  padding: 13px 50px 13px 13px !important;
}

/* CSS for main title on header */
.blog-title a {
  color: white;
  text-decoration: none;
}
/* ... */

